--- a/2024/src/app/schedule/schedule-mobile/schedule-mobile.component.html
+++ b/2024/src/app/schedule/schedule-mobile/schedule-mobile.component.html
@@ -1,12 +1,18 @@
 <div class="schedule-body">
-    <div class="left-arrow" (click)="shiftLeft()">
+    <div class="left-arrow" (click)="shiftLeft()" *ngIf="!scheduleService.comingSoon">
         <img src="../../../assets/images/left-arrow.png">
     </div>
-    <div class="right-arrow" (click)="shiftRight()">
+    <div class="right-arrow" (click)="shiftRight()" *ngIf="!scheduleService.comingSoon">
         <img src="../../../assets/images/right-arrow.png">
     </div>
     <div class="title" style="margin: 3.5rem 0;">Programação</div>
-    <div class="cards">
+    <div class="coming-soon" *ngIf="scheduleService.comingSoon">
+        <div class="card">
+            <img class="decoration" src="../../../assets/images/card-decoration-green.png">
+            <div class="title">Em breve!</div>
+        </div>
+    </div>
+    <div class="cards" *ngIf="!scheduleService.comingSoon">
         <div class="card-background" *ngIf="schedule">
             <div class="card">
                 <img class="decoration" src="../../../assets/images/card-decoration-green.png">
@@ -16,7 +22,7 @@
             </div>
         </div>
     </div>
-    <div class="fake-cards">
+    <div class="fake-cards" *ngIf="!scheduleService.comingSoon">
         <div class="card-background" *ngIf="schedule">
             <div class="card">
                 <img class="decoration" src="../../../assets/images/card-decoration-green.png">
