--- a/2024/src/app/footer/footer/footer.component.html
+++ b/2024/src/app/footer/footer/footer.component.html
@@ -1,3 +1,8 @@
 <div class="footer-body">
     <img class="footer-image" src="../../../assets/images/logo.png">
+    <div class="made-by">
+        <span>Realização:</span>
+        <img class="manguezal" src="../../../assets/images/logo-manguezal.png">
+    </div>
 </div>
+<div class="site-ending"></div>
