--- a/2024/src/app/nav-bar/bar/bar.component.scss
+++ b/2024/src/app/nav-bar/bar/bar.component.scss
@@ -1,29 +1,33 @@
 @import '../../../styles.scss';
 
 .nav-bar-body {
-    position: relative;
+    position: fixed;
     width: 100%;
     display: flex;
-    background-color: $main-green;
+    background-color: $main-purple;
     justify-content: flex-end;
     padding: 1rem 2rem;
     align-items: center;
     height: 70px;
+    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+    z-index: +3;
     @media (max-width: 1024px) {
         justify-content: center;
     }
     @media (max-width: 590px) {
         justify-content: flex-start;
     }
-    @media (max-width: 450px) {
-        position: absolute;
-        background-color: transparent;
+    @media (max-width: 580px) {
+        position: fixed;
         justify-content: space-between;
         height: 0px;
-        padding: 2rem 2rem;
+        padding: 2rem 1rem;
+    }
+    @media (max-width: 280px) {
+        padding: 3rem 1rem 2rem 1rem;
     }
     .instagram-icon {
-        background-color: $main-purple;
+        background-color: $main-green;
         padding: 0.6rem 0.6rem;
         border-radius: 50%;
         display: flex;
@@ -41,9 +45,12 @@
             background-color: $main-green;
             padding: 0.4rem 0.4rem;
         }
+        @media (max-width: 280px) {
+            margin: 0 0 0 100%;
+        }
         .icon {
             width: 1.2rem;
-            content: url('../../../assets/images/instagram-logo.png');
+            content: url('../../../assets/images/instagram-logo-purple.png');
             @media (max-width: 450px) {
                 content: url('../../../assets/images/instagram-logo-purple.png');
             }
