--- a/2024/src/app/nav-bar/menu/menu.component.scss
+++ b/2024/src/app/nav-bar/menu/menu.component.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    @media (max-width: 450px) {
+    @media (max-width: 580px) {
         display: flex;
     }
     .button {
@@ -17,7 +17,7 @@
 
 .menu-list {
     flex: 1;
-    @media (max-width: 450px) {
+    @media (max-width: 580px) {
         flex: 0;
     }
     .list {
@@ -35,7 +35,7 @@
         @media (max-width: 590px) {
             gap: 1rem;
         }
-        @media (max-width: 450px) {
+        @media (max-width: 580px) {
             position: absolute;
             width: 12rem;
             font-size: 12px;
@@ -44,7 +44,10 @@
             justify-content: flex-start;
             gap: 0;
             border-radius: 0.2rem;
-            background-color: $main-green;
+            background-image: url('../../../assets/images/green-texture.png');
+            background-position: 50% 50%;
+            background-size: auto;
+            background-repeat: no-repeat;
             box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
             left: 2.3rem;
             top: 1rem;
@@ -55,7 +58,7 @@
         }
         .list-item {
             cursor: pointer;
-            @media (max-width: 450px) {
+            @media (max-width: 580px) {
                 padding: 0.7rem 1.2rem;
                 width: 100%;
             }
@@ -65,14 +68,14 @@
                 font-weight: 300;
                 text-decoration: none;
                 color: white;
-                @media (max-width: 450px) {
+                @media (max-width: 580px) {
                     font-size: 14px;
                 }
             }
         }
         .separator {
             display: none;
-            @media (max-width: 450px) {
+            @media (max-width: 580px) {
                 display: flex;
                 width: 100%;
                 background-color: white;
