--- a/2024/src/app/schedule/schedule/schedule.component.html
+++ b/2024/src/app/schedule/schedule/schedule.component.html
@@ -1,6 +1,12 @@
 <div class="schedule-body">
     <div class="title" style="margin: 3.5rem 0;">Programação</div>
-    <div class="cards">
+    <div class="coming-soon" *ngIf="scheduleService.comingSoon">
+        <div class="card">
+            <img class="decoration" src="../../../assets/images/card-decoration-green.png">
+            <div class="title">Em breve!</div>
+        </div>
+    </div>
+    <div class="cards" *ngIf="!scheduleService.comingSoon">
         <div class="card-background" *ngFor="let schedule of schedules">
             <div class="card">
                 <img class="decoration" src="../../../assets/images/card-decoration-green.png">
