--- a/2024/src/app/schedule/schedule/schedule.component.scss
+++ b/2024/src/app/schedule/schedule/schedule.component.scss
@@ -12,6 +12,35 @@
         font-weight: 800;
         color: white;
     }
+    .coming-soon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 30rem;
+        .card {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-image: url('../../../assets/images/IDV-Mangue_BACKGROUND.png');
+            width: 100%;
+            background-size: contain;
+            padding: 2rem 2rem;
+            justify-content: space-around;
+            height: 13rem;
+            min-height: 13rem;
+            .decoration {
+                position: absolute;
+                background-color: transparent;
+                top: -0.5rem;
+            }
+            .title {
+                color: $main-purple;
+                font-size: 30px;
+                font-weight: 500;
+            }
+        }
+    }
     .cards {
         display: grid;
         width: 85%;
