--- a/2024/src/app/about/about.component.html
+++ b/2024/src/app/about/about.component.html
@@ -4,46 +4,36 @@
         <div class="section">
             <div class="text">
                 <a>
-                    Lorem ipsum dolor sit amet consectetur. Urna vel etiam ut dignissim eget tincidunt nulla amet.
-                    Sapien felis duis pellentesque tincidunt convallis nibh lectus. Adipiscing vitae et lorem id amet
-                    amet.
+                    O Mangue.bit é a maior conferência de startups organizada por uma comunidade voluntária no Brasil, a 
+                    comunidade Manguezal. Em sua 8ª edição, este evento anual reúne startups, investidores e empreendedores 
+                    de todo o país, destacando o vibrante ecossistema de Recife. Aqui, as conexões se formam e as ideias ganham vida.
                 </a>
             </div>
             <div class="text">
                 <a>
-                    Lorem ipsum dolor sit amet consectetur. Urna vel etiam ut dignissim eget tincidunt nulla amet. 
-                    Sapien felis duis pellentesque tincidunt convallis nibh lectus. Adipiscing vitae et lorem id amet amet. 
-                    Lorem ipsum dolor sit amet consectetur. Urna vel etiam ut dignissim eget tincidunt nulla amet. 
-                    Sapien felis duis pellentesque tincidunt convallis nibh lectus. Adipiscing vitae et lorem id amet amet. 
-                </a>
-            </div>
-            <div class="text" style="margin: 0 0 1rem 0;">
-                <a>
-                    Lorem ipsum dolor sit amet consectetur. Urna vel etiam ut dignissim eget tincidunt nulla amet. 
-                    Sapien felis duis pellentesque tincidunt convallis nibh lectus. Adipiscing vitae et lorem id amet amet.
-                </a>
-            </div>
-            <div class="text">
-                <a>
-                    Lorem ipsum dolor sit amet consectetur. Urna vel etiam ut dignissim eget tincidunt nulla amet. 
-                    Sapien felis duis pellentesque tincidunt convallis nibh lectus. Adipiscing vitae et lorem id amet amet.
+                    Estamos no maior parque tecnológico urbano e aberto da América Latina, e a energia é contagiante. Com todos 
+                    os agentes de inovação presentes, desde grandes empresas até investidores ávidos por novidades, o Mangue.bit 
+                    não é apenas um evento, é um marco no calendário de inovação. É aqui que o ecossistema de startups de Recife 
+                    se expõe ao país, demonstrando seu potencial e sua capacidade de liderar a vanguarda tecnológica. 
                 </a>
             </div>
         </div>
         <div class="section">
             <div class="title">
-                <a>Agarre a oportunidade de se mostrar como um<br> empreendedor de inovação.</a>
+                <a>Aqui no Mangue.bit é onde as startups de Recife brilham e a inovação do Brasil se encontra!</a>
             </div>       
             <div class="text">
                 <a>
-                    Lorem ipsum dolor sit amet consectetur. Urna vel etiam ut dignissim eget tincidunt nulla amet. 
-                    Sapien felis duis pellentesque tincidunt convallis nibh lectus. Adipiscing vitae et lorem id amet amet.
+                    Imagine um lugar onde os pioneiros da inovação de todo o Brasil se encontram para compartilhar ideias, 
+                    fazer conexões valiosas e assistir a pitches empolgantes. Isso é Mangue.bit! Aqui, startups locais têm o 
+                    palco aberto para brilhar e captar a atenção de investidores e grandes empresas.
                 </a>
             </div>
             <div class="text" style="margin: 0;">
                 <a>
-                    Lorem ipsum dolor sit amet consectetur. Urna vel etiam ut dignissim eget tincidunt nulla amet. 
-                    Sapien felis duis pellentesque tincidunt convallis nibh lectus. Adipiscing vitae et lorem id amet amet.
+                    Venha fazer parte do Mangue.bit! Conecte-se com as estrelas do empreendedorismo, inspire-se com as 
+                    histórias de sucesso e descubra como sua startup pode decolar no vibrante ecossistema de Recife. Te 
+                    esperamos aqui, onde o passado histórico encontra o futuro da inovação!
                 </a>
             </div>
             <img class="decoration" src="../../assets/images/IDV-Mangue_PONTE.png">
