--- a/2024/src/app/partners/partners.component.scss
+++ b/2024/src/app/partners/partners.component.scss
@@ -6,7 +6,7 @@
     position: relative;
     width: 100%;
     align-items: center;
-    height: 40rem;
+    min-height: 40rem;
     .title {
         font-family: $inter;
         font-size: 30px;
@@ -40,6 +40,22 @@
         }
         @media (max-width: 215px) {
             width: 12rem;
+        }
+    }
+    .partners {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-around;
+        width: 90%;
+        padding: 2rem 0;
+        .partner {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            img {
+                width: 60%;
+            }
         }
     }
 }
