Cards design adjusted

--- a/2024/src/app/schedule/schedule-mobile/schedule-mobile.component.scss
+++ b/2024/src/app/schedule/schedule-mobile/schedule-mobile.component.scss
@@ -87,7 +87,7 @@
                 background-size: contain;
                 padding: 2rem 1rem;
                 justify-content: flex-start;
-                height: 11rem;
+                height: 12rem;
                 min-height: 11rem;
                 .decoration {
                     position: absolute;
@@ -99,7 +99,7 @@
                     align-items: center;
                     justify-content: center;
                     color: $main-purple;
-                    font-size: 12px;
+                    font-size: 15px;
                     height: 3rem;
                     min-height: 3rem;
                     max-height: 3rem;
@@ -108,7 +108,7 @@
                 .time {
                     color: $main-purple;
                     font-family: $inter;
-                    font-size: 16px;
+                    font-size: 22px;
                     font-weight: 800;
                     margin: 0 0 1rem 0;
                 }
@@ -118,6 +118,7 @@
                     color: $main-purple;
                     text-align: center;
                     font-weight: 400;
+                    padding: 0 0 1rem 0;
                 }
             }
         }
