--- a/2024/src/app/about/about.component.html
+++ b/2024/src/app/about/about.component.html
@@ -4,19 +4,12 @@
         <div class="section">
             <div class="text">
                 <a>
-                    O Mangue.bit é a maior conferência de startups organizada por uma comunidade voluntária no Brasil, a 
-                    comunidade Manguezal. Em sua 8ª edição, este evento anual reúne startups, investidores e empreendedores 
+                    O Mangue.bit é a maior conferência de startups organizada por uma comunidade voluntária no Brasil, 
+                    a comunidade Manguezal. Em sua 8ª edição, este evento anual reúne startups, investidores e empreendedores 
                     de todo o país, destacando o vibrante ecossistema de Recife. Aqui, as conexões se formam e as ideias ganham vida.
                 </a>
             </div>
-            <div class="text">
-                <a>
-                    Estamos no maior parque tecnológico urbano e aberto da América Latina, e a energia é contagiante. Com todos 
-                    os agentes de inovação presentes, desde grandes empresas até investidores ávidos por novidades, o Mangue.bit 
-                    não é apenas um evento, é um marco no calendário de inovação. É aqui que o ecossistema de startups de Recife 
-                    se expõe ao país, demonstrando seu potencial e sua capacidade de liderar a vanguarda tecnológica. 
-                </a>
-            </div>
+            <img class="decoration" src="../../assets/images/IDV-Mangue_PONTE.png" style="transform: rotate(1.8deg);" *ngIf="!mobile">
         </div>
         <div class="section">
             <div class="title">
@@ -29,14 +22,8 @@
                     palco aberto para brilhar e captar a atenção de investidores e grandes empresas.
                 </a>
             </div>
-            <div class="text" style="margin: 0;">
-                <a>
-                    Venha fazer parte do Mangue.bit! Conecte-se com as estrelas do empreendedorismo, inspire-se com as 
-                    histórias de sucesso e descubra como sua startup pode decolar no vibrante ecossistema de Recife. Te 
-                    esperamos aqui, onde o passado histórico encontra o futuro da inovação!
-                </a>
-            </div>
-            <img class="decoration" src="../../assets/images/IDV-Mangue_PONTE.png">
+            <img class="subscribe" src="../../assets/images/subscribe-here-button.png">
+            <img class="hidden-decoration" src="../../assets/images/IDV-Mangue_PONTE.png" style="transform: rotate(1.8deg);" *ngIf="mobile">
         </div>
     </div>
 </div>
