--- a/2024/src/app/about/about.component.scss
+++ b/2024/src/app/about/about.component.scss
@@ -6,6 +6,10 @@
     flex-direction: column;
     align-items: center;
     background-repeat: no-repeat;
+    padding: 0 0 2rem 0;
+    @media (max-width: 700px) {
+        padding: 0;
+    }
     .logo {
         width: 20rem;
         margin: 4rem 0;
@@ -35,23 +39,28 @@
             align-items: center;
             flex: 1;
             width: 80%;
+            margin: 0 0 2rem 0;
             @media (max-width: 450px) {
                 width: 90%;
             }
             .text, .title, .button {
                 flex: 1;
-                width: 85%;
+                width: 75%;
+                text-align: center;
+                @media (max-width: 1024px) {
+                    width: 80%;
+                }
             }
             .text {
-                margin: 0 0 2rem 0;
+                margin: 0 0 0rem 0;
                 @media (max-width: 1024px) {
                     text-align: center;
                 }
                 a {
                     color: $main-purple;
                     font-family: $inter;
-                    font-size: 12px;
-                    font-weight: 400;
+                    font-size: 13px;
+                    font-weight: 500;
                     @media (max-width: 1024px) {
                         font-size: 16px;
                     }
@@ -68,7 +77,7 @@
                 a {
                     color: $main-purple;
                     font-family: $inter;
-                    font-size: 12px;
+                    font-size: 13px;
                     font-weight: 700;
                     @media (max-width: 1024px) {
                         font-size: 16px;
@@ -85,6 +94,31 @@
                 }
                 @media (max-width: 245px) {
                     width: 10rem;
+                }
+            }
+            .hidden-decoration {
+                width: 60%;
+                @media (max-width: 1024px) {
+                    width: 30%;
+                }
+                @media (max-width: 700px) {
+                    width: 100%;
+                }
+                @media (max-width: 300px) {
+                    width: 70%;
+                }
+            }
+            .subscribe {
+                width: 45%; 
+                margin: 2rem 0 0 0;
+                @media (max-width: 1024px) {
+                    width: 30%;
+                }
+                @media (max-width: 700px) {
+                    width: 60%;
+                }
+                @media (max-width: 300px) {
+                    width: 70%;
                 }
             }
         }
