Subscribe button fixed

--- a/2024/src/app/about/about.component.html
+++ b/2024/src/app/about/about.component.html
@@ -22,7 +22,7 @@
                     palco aberto para brilhar e captar a atenção de investidores e grandes empresas.
                 </a>
             </div>
-            <img class="subscribe" src="../../assets/images/subscribe-here-button.png">
+            <img class="subscribe" src="../../assets/images/subscribe-here-button.png" (click)="goToLink('https://www.even3.com.br/manguebit-2024-438948/')">
             <img class="hidden-decoration" src="../../assets/images/IDV-Mangue_PONTE.png" style="transform: rotate(1.8deg);" *ngIf="mobile">
         </div>
     </div>
