--- a/2024/src/app/about/about.component.scss
+++ b/2024/src/app/about/about.component.scss
@@ -111,6 +111,7 @@
             .subscribe {
                 width: 45%; 
                 margin: 2rem 0 0 0;
+                cursor: pointer;
                 @media (max-width: 1024px) {
                     width: 30%;
                 }
@@ -120,6 +121,9 @@
                 @media (max-width: 300px) {
                     width: 70%;
                 }
+            }
+            .subscribe:hover {
+                opacity: 0.7;
             }
         }
     }
