--- a/2024/src/app/footer/footer/footer.component.html
+++ b/2024/src/app/footer/footer/footer.component.html
@@ -2,7 +2,14 @@
     <img class="footer-image" src="../../../assets/images/logo.png">
     <div class="made-by">
         <span>Realização:</span>
-        <img class="manguezal" src="../../../assets/images/logo-manguezal.png">
+        <img class="manguezal" src="../../../assets/images/Logo-Manguezal-2.png">
+    </div>
+    <div class="made-by">
+        <span>Apoio:</span>
+        <img class="sebrae" src="../../../assets/images/Sebrae-01.png">
     </div>
 </div>
-<div class="site-ending"></div>
+<div class="site-ending">
+    <div>© Copyright Manguezal. All Rights Reserved</div>
+    <div>Design and develop. by Daus</div>
+</div>
