--- a/2024/src/app/partners/partners.component.html
+++ b/2024/src/app/partners/partners.component.html
@@ -1,29 +1,28 @@
 <div class="partners-body">
-    <img class="decorator" src="../../assets/images/IDV-Mangue_RUA-DA-AURORA-MANGUEBEAT.png">
     <div class="title">Patrocínio</div>
     <div class="partners">
         <div class="tubarao">
-            <div class="title">Tubarão</div>
+            <img class="title" src="../../assets/images/categoria-tubarao.png">
             <div class="partner" *ngFor="let partner of tubaroes">
                 <img src="{{ partner.img_address }}">
             </div>
         </div>
         <div class="guaiamum">
-            <div class="title">Guaiamum</div>
+            <img class="title" src="../../assets/images/categoria-guaiamum.png">
             <div class="partner" *ngFor="let partner of guaiamuns">
                 <img src="{{ partner.img_address }}">
             </div>
         </div>
         <div class="aratu">
-            <div class="title">Aratu</div>
+            <img class="title" src="../../assets/images/categoria-aratu.png">
             <div class="partners-container">
                 <div class="partner" *ngFor="let partner of aratus">
                     <img src="{{ partner.img_address }}">
                 </div>
             </div>
         </div>
-        <div class="chie">
-            <div class="title">Chié / Apoio</div>
+        <div class="chie" style="margin: 0;">
+            <img class="title" src="../../assets/images/categoria-chie.png">
             <div class="partners-container">
                 <div class="partner" *ngFor="let partner of chies">
                     <img src="{{ partner.img_address }}">
