--- a/2024/src/app/schedule/schedule-tablet/schedule-tablet.component.scss
+++ b/2024/src/app/schedule/schedule-tablet/schedule-tablet.component.scss
@@ -23,7 +23,7 @@
         right: 0;
     }
     .title {
-        font-family: $inter;
+        font-family: $exo;
         font-size: 30px;
         font-weight: 800;
         color: white;
@@ -100,13 +100,13 @@
                 }
                 .time {
                     color: $main-purple;
-                    font-family: $inter;
+                    font-family: $exo;
                     font-size: 22px;
                     font-weight: 800;
                     margin: 0 0 1rem 0;
                 }
                 .text {
-                    font-family: $inter;
+                    font-family: $exo;
                     font-size: 11px;
                     color: $main-purple;
                     text-align: center;
@@ -154,12 +154,12 @@
                 }
                 .time {
                     color: $main-purple;
-                    font-family: $inter;
+                    font-family: $exo;
                     font-size: 16px;
                     font-weight: 800;
                 }
                 .text {
-                    font-family: $inter;
+                    font-family: $exo;
                     font-size: 12px;
                     color: $main-purple;
                     text-align: center;
