--- a/2024/src/app/schedule/schedule/schedule.component.scss
+++ b/2024/src/app/schedule/schedule/schedule.component.scss
@@ -7,7 +7,7 @@
     align-items: center;
     padding: 0 0 5rem 0;
     .title {
-        font-family: $inter;
+        font-family: $exo;
         font-size: 30px;
         font-weight: 800;
         color: white;
@@ -86,13 +86,13 @@
                 }
                 .time {
                     color: $main-purple;
-                    font-family: $inter;
+                    font-family: $exo;
                     font-size: 22px;
                     font-weight: 800;
                     margin: 0 0 1rem 0;
                 }
                 .text {
-                    font-family: $inter;
+                    font-family: $exo;
                     font-size: 11px;
                     color: $main-purple;
                     text-align: center;
