--- a/2024/src/app/about/about.component.scss
+++ b/2024/src/app/about/about.component.scss
@@ -1,11 +1,11 @@
 @import '../../styles.scss';
 
 .about-body {
-    background-size: cover;
+    background-size: contain;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     padding: 0 0 2rem 0;
     @media (max-width: 700px) {
         padding: 0;
@@ -24,7 +24,8 @@
         display: flex;
         align-items: flex-start;
         justify-content: space-around;
-        width: 70%;
+        width: 75%;
+        gap: 3rem;
         @media (max-width: 1024px) {
             flex-direction: column;
             align-items: center;
@@ -43,41 +44,22 @@
             @media (max-width: 450px) {
                 width: 90%;
             }
-            .text, .title, .button {
+            .text {
                 flex: 1;
-                width: 75%;
+                width: 90%;
                 text-align: center;
                 @media (max-width: 1024px) {
                     width: 80%;
                 }
             }
             .text {
-                margin: 0 0 0rem 0;
                 @media (max-width: 1024px) {
                     text-align: center;
                 }
                 a {
                     color: $main-purple;
-                    font-family: $inter;
-                    font-size: 13px;
-                    font-weight: 500;
-                    @media (max-width: 1024px) {
-                        font-size: 16px;
-                    }
-                    @media (max-width: 450px) {
-                        font-size: 12px;
-                    }
-                }
-            }
-            .title { 
-                margin: 0 0 1.5rem 0;
-                @media (max-width: 1024px) {
-                    text-align: center;
-                }
-                a {
-                    color: $main-purple;
-                    font-family: $inter;
-                    font-size: 13px;
+                    font-family: $exo;
+                    font-size: 14px;
                     font-weight: 700;
                     @media (max-width: 1024px) {
                         font-size: 16px;
@@ -87,29 +69,19 @@
                     }
                 }
             }
-            .decoration {
-                width: 20rem;
-                @media (max-width: 330px) {
-                    width: 15rem;
-                }
-                @media (max-width: 245px) {
-                    width: 10rem;
-                }
-            }
-            .hidden-decoration {
-                width: 60%;
-                @media (max-width: 1024px) {
-                    width: 30%;
-                }
-                @media (max-width: 700px) {
-                    width: 100%;
-                }
-                @media (max-width: 300px) {
-                    width: 70%;
+            .rotated-image {
+                display: flex;
+                flex: 1;
+                align-items: center;
+                justify-content: center;
+                img {
+                    width: 80%;    
+                    border: 5px solid $main-purple;
+                    transform: rotate(-5deg);
                 }
             }
             .subscribe {
-                width: 45%; 
+                width: 35%; 
                 margin: 2rem 0 0 0;
                 cursor: pointer;
                 @media (max-width: 1024px) {
