--- a/2024/src/app/partners/partners.component.scss
+++ b/2024/src/app/partners/partners.component.scss
@@ -6,40 +6,18 @@
     position: relative;
     width: 100%;
     align-items: center;
-    padding: 0 0 5rem 0;
+    padding: 0;
     .title {
-        font-family: $inter;
+        font-family: $exo;
         font-size: 30px;
         font-weight: 800;
         margin: 4rem 3.5rem 1.5rem 3.5rem;
         color: $main-purple;
-        @media (max-width: 815px) {
-            margin: 11rem 0rem 3.5rem 0rem;
-        }
         @media (max-width: 450px) {
             font-size: 25px;
         }
-        @media (max-width: 330px) {
-            margin: 8rem 0rem 3.5rem 0rem;
-        }
         @media (max-width: 260px) {
             font-size: 20px;
-        }
-        @media (max-width: 215px) {
-            margin: 6rem 0rem 3.5rem 0rem;
-        }
-    }
-    .decorator {
-        position: absolute;
-        width: 20rem;
-        top: -4.5rem;
-        left: -3.8rem;
-        transform: rotate(-14.5deg);
-        @media (max-width: 330px) {
-            width: 15rem;
-        }
-        @media (max-width: 215px) {
-            width: 12rem;
         }
     }
     .partners {
@@ -49,19 +27,18 @@
         align-items: center;
         justify-content: space-around;
         width: 90%;
-        padding: 2rem 0;
+        padding: 2rem 0 0 0;
         .tubarao, .guaiamum, .aratu, .chie {
             display: flex;
             flex-direction: column;
             margin: 0 0 4rem 0;
             .title {
-                text-align: center;
-                background-image: url('../../assets/images/partner-title-background.png');
-                font-size: 18px;
-                padding: 0.5rem 1rem;
-                background-size: cover;
-                background-repeat: no-repeat;
+                align-self: center;
+                width: 35%;
                 margin: 0.7rem 0 1rem 0;
+                @media (max-width: 580px) {
+                    width: 70%;
+                }
             }
         } 
         .tubarao, .guaiamum {
@@ -85,6 +62,15 @@
         }
         .aratu, .chie {
             width: 75%;
+            .title {
+                width: 25%;
+                @media (max-width: 1024px) {
+                    width: 35%;
+                }
+                @media (max-width: 580px) {
+                    width: 70%;
+                }
+            }
             .partners-container {
                 display: flex;
                 flex-wrap: wrap;
