--- a/2024/src/styles.scss
+++ b/2024/src/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 * {
     padding: 0;
@@ -15,9 +16,11 @@
 $main-green: #69B973;
 $main-purple: #452F7B;
 $main-grey: #F4F4F5;
+$main-blue: #3FA2B5;
 
 // Fonts
 $inter: 'Inter', sans-serif;
+$exo: 'Exo 2', sans-serif;
 
 
 
